# OpenGlTrials

./: CMakeLists.txt  LearnOpenGl.sln  README.md
LearnOpenGl/: LearnOpenGl.vcxproj  LearnOpenGl.vcxproj.filters  imgui.ini
LearnOpenGl/assets/: fragment_core.glsl  geodesic.frag  grid_fragment.glsl  grid_vertex.glsl  instance_3d_fragment.glsl  instance_3d_vertex.glsl  particle_fragment.glsl  particle_vertex.glsl  pbr_shader.glsl  post_process.glsl  relativistic_black_hole.comp  relativistic_black_hole_fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  spacetime_grid_fragment.glsl  spacetime_grid_vertex.glsl  standard_3d_vertex.glsl  star_fragment.glsl  star_sprite_fragment.glsl  star_sprite_vertex.glsl  star_vertex.glsl  vertex_core.glsl
LearnOpenGl/lib/: stb.cpp
LearnOpenGl/src/: Camera.h  FallSim.cpp  FallSim.h  FluidSimMasterpiece.cpp  FluidSimMasterpiece.h  FluidSimSPH.cpp  FluidSimSPH.h  Framebuffer.cpp  Framebuffer.h  GalaxySim3D.cpp  GalaxySim3D.h  GravitySim.cpp  GravitySim.h  ISimulation.h  MeshLibrary.cpp  MeshLibrary.h  Octree.cpp  Octree.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsUtility.h  Picker.h  RelativisticSim.cpp  RelativisticSim.h  Shader.h  SimulationManager.cpp  SimulationManager.h  SoftBodySim.cpp  SoftBodySim.h  SpaceTimeSim.cpp  SpaceTimeSim.h  detect_simd.cpp  glad.c  main.cpp
LearnOpenGl/src/Editor/: EditorLayer.cpp  EditorLayer.h
LearnOpenGl/src/Engine/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SpatialGrid.h  Window.cpp  Window.h
Linking/include/glad/: glad.h
